# DeShiftr

./: .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  LICENSE  README.cs.md  README.md  build_bigram_model.bat  pyproject.toml  requirements.txt  run_attack.bat
.github/workflows/: ci.yml
data/: .gitattributes
data/ciphertexts_to_analyze/: text_1000_sample_1_ciphertext.txt
notebooks/: 01_demo.ipynb  02_bigram_model.ipynb  03_attack.ipynb
notebooks/data/model/: reference_tm.npy  reference_tm_notebook_demo.npy
notebooks/exports/notebook_attack_demo/: text_121_sample_99_key.txt  text_121_sample_99_plaintext.txt
scripts/: build_bigram_model.py  run_attack.py
subcipher/: __init__.py  alphabet.py  codec.py  io.py  mh.py  stats.py  text_utils.py
subcipher.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_codec.py  test_mh.py  test_stats.py
