[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "subcipher"
version = "0.1.0"
description = "Toolbox for classic substitution cipher & cryptoanalysis"
authors = [{name = "Vaše Jméno"}]
requires-python = ">=3.10"
dependencies = ["numpy>=1.24"]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "black", "flake8", "pre-commit"]

[tool.setuptools]
packages = ["subcipher"]
